# python-package-template

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.repo_name}}/: README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: cd.yml  ci.yml
{{cookiecutter.repo_name}}/docs/: api.rst  conf.py  index.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: test_basic.py
